adding styell to index

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,13 +1,13 @@
 <head>
 	<title>ES Config Tool</title>
 	<link rel="icon" type="image/png" href="static/favicon.png">
-	<link rel="stylesheet" type="text/css" href="static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="static/css/site.css">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 </head>
 <div class="app_title"><img src="static/logo.png" height=30px> Flask Project </div>
-<div class="app_description">powered by : openshift.com.</div>
+<div class="app_description">Description</div>
 <hr>
-<a href="upload" class="menuitem">[Upload File to Edit]</a> 
+<a href="upload" class="menuitem">[Upload File to server]</a> 
 <a href="editor" class="menuitem">[Editor]</a>
 <a href="builds" class="menuitem">[Build Files]</a>
 <a href="logout" class="menuitem">[Logout]</a>
