--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="static/css/site.css">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 </head>
-<div class="app_title"><img src="static/logo.png" height=30px> Flask Project </div>
+<div class="app_title"><img src="static/images/logo.png" height=30px> Flask Project </div>
 <div class="app_description">Description</div>
 <hr>
 <a href="upload" class="menuitem">[Upload File to server]</a> 
