--- a/static/css/site.css
+++ b/static/css/site.css
@@ -191,3 +191,11 @@ line-height: 1.4;
   overflow: auto;
   font-family: Menlo,Monaco,"Liberation Mono",Consolas,monospace !important;
 }
+.app_title {
+	font-size: 24px;
+}
+
+.app_description {
+	font-size: 14px;
+	color: gray;
+}
