--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,10 @@
 <head>
-	<title>ES Config Tool</title>
+	<title>My Flask Project</title>
 	<link rel="icon" type="image/png" href="static/favicon.png">
 	<link rel="stylesheet" type="text/css" href="static/css/site.css">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 </head>
-<div class="app_title"><img src="static/images/logo.png" height=30px> Flask Project </div>
+<div class="app_title"><img src="static/images/logo.png" height=50px> Flask Project </div>
 <div class="app_description">Description</div>
 <hr>
 <a href="upload" class="menuitem">[Upload File to server]</a> 
