--- a/templates/header.html
+++ b/templates/header.html
@@ -7,8 +7,6 @@
 <div class="app_title"><img src="static/images/logo.png" height=50px> Flask Project </div>
 <div class="app_description">Description</div>
 <hr>
-<a href="upload" class="menuitem">[Upload File to server]</a> 
-<a href="editor" class="menuitem">[Editor]</a>
-<a href="builds" class="menuitem">[Build Files]</a>
+<a href="admin" class="menuitem">[Admin]</a> 
 <a href="logout" class="menuitem">[Logout]</a>
 <hr>
