--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,2 @@
-<!doctype html>
-{% include 'header.html'%}
-<div class="logout">You are logged out!</div>
-{% include 'footer.html'%}
+<hr>
+<div> class="footer">Designed by Amir, powered by openshift.com </div>
