--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,2 +1,2 @@
 <hr>
-<div> class="footer">Designed by Amir, powered by openshift.com </div>
+<div class="footer">Designed by Amir, powered by openshift.com </div>
