--- a/templates/header.html
+++ b/templates/header.html
@@ -8,5 +8,5 @@
 <div class="app_description">Description</div>
 <hr>
 <a href="admin" class="menuitem">[Admin]</a> 
-<a href="logout" class="menuitem">[Logout]</a>
+<a href="exit" class="menuitem">[Logout]</a>
 <hr>
