--- a/templates/header.html
+++ b/templates/header.html
@@ -7,6 +7,7 @@
 <div class="app_title"><img src="static/images/logo.png" height=50px> Flask Project </div>
 <div class="app_description">Description</div>
 <hr>
+<a href="/" class="menuitem">[Home]</a> 
 <a href="admin" class="menuitem">[Admin]</a> 
 <a href="exit" class="menuitem">[Logout]</a>
 <hr>
