start to add authentication

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,5 +9,5 @@
 <hr>
 <a href="/" class="menuitem">[Home]</a> 
 <a href="admin" class="menuitem">[Admin]</a> 
-<a href="exit" class="menuitem">[Logout]</a>
+<a href="logout" class="menuitem">[Logout]</a>
 <hr>
