--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 {% include 'header.html'%}
 
-body of file
+This is a test flask project for authentication.
 
 {% include 'footer.html'%}
