--- a/static/css/site.css
+++ b/static/css/site.css
@@ -205,3 +205,11 @@ line-height: 1.4;
 	font-weight: bold;
 
 }
+
+.footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
+   background:#6cf;
+}
