--- a/static/css/site.css
+++ b/static/css/site.css
@@ -211,5 +211,5 @@ line-height: 1.4;
    bottom:0;
    width:100%;
    height:60px;   /* Height of the footer */
-   background:#6cf;
+   /* background:#6cf; */
 }
