--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,2 +1,5 @@
+
+<div class="footer">
 <hr>
-<div class="footer">Designed by Amir, powered by openshift.com </div>
+	Designed by Amir, powered by openshift.com
+ </div>
