--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,16 @@
 <div class="app_title"><img src="static/images/logo.png" height=50px> Flask Project </div>
 <div class="app_description">Description</div>
 <hr>
-<a href="/" class="menuitem">[Home]</a> 
+<a href="/" class="menuitem">[About me]</a> 
+<a href="/" class="menuitem">[About me]</a> 
+<a href="/" class="menuitem">[Guestbook]</a> 
+<a href="/" class="menuitem">[Art Gallery]</a> 
+<a href="/" class="menuitem">[Publishes]</a> 
+<a href="/" class="menuitem">[Library]</a> 
+<a href="/" class="menuitem">[Camera Project]</a> 
+<a href="/" class="menuitem">[Mobile Network]</a> 
+<a href="/" class="menuitem">[My git]</a> 
+<a href="/" class="menuitem">[My WiKi]</a> 
 <a href="admin" class="menuitem">[Admin]</a> 
 <a href="logout" class="menuitem">[Logout]</a>
 <hr>
