--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
 	<meta name=viewport content="width=device-width, initial-scale=1">
 </head>
 <div class="app_title"><img src="static/images/logo.png" height=50px> Flask Project </div>
-<div class="app_description">Description</div>
+<div class="app_description">If you have a dream, don't waste your energies explaining why!</div>
 <hr>
 <a href="/" class="menuitem">[About me]</a> 
 <a href="/" class="menuitem">[About me]</a> 
