--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 {% include 'header.html'%}
 
-This is a test flask project for authentication.
-
+<img src=src="static/images/logo.png">
+<p>
+This is my private website. I use it for testing some projects, storing my wiki and photo gallery. If you need more info, please don't hesitate to contact me. 
+</p>
 {% include 'footer.html'%}
