--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 {% include 'header.html'%}
 
-<img src=src="static/images/logo.png">
+<div class="textbox">
+<img <img src="static/images/logo.png">
 <p>
 This is my private website. I use it for testing some projects, storing my wiki and photo gallery. If you need more info, please don't hesitate to contact me. 
 </p>
+</div>
 {% include 'footer.html'%}
