--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% include 'header.html'%}
 
 <div class="textbox">
-<img <img src="static/images/logo.png">
+<img <img src="static/images/logo.png" width=100px>
 <p>
 This is my private website. I use it for testing some projects, storing my wiki and photo gallery. If you need more info, please don't hesitate to contact me. 
 </p>
