adding git to menu

--- a/templates/header.html
+++ b/templates/header.html
@@ -14,7 +14,7 @@
 <a href="/" class="menuitem">[Library]</a> 
 <a href="/" class="menuitem">[Camera Project]</a> 
 <a href="/" class="menuitem">[Mobile Network]</a> 
-<a href="/" class="menuitem">[My git]</a> 
+<a href="http://github.com/pangan" class="menuitem">[My git]</a> 
 <a href="http://wiki.mofakhar.info" class="menuitem">[My WiKi]</a> 
 <a href="admin" class="menuitem">[Admin]</a> 
 <a href="logout" class="menuitem">[Logout]</a>
