--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,7 @@
 <div class="app_description">If you have a dream, don't waste your energies explaining why!</div>
 <hr>
 <a href="/" class="menuitem">[About me]</a> 
+<a href="contact" class="menuitem">[Contacts]</a> 
 <a href="/" class="menuitem">[Guestbook]</a> 
 <a href="/" class="menuitem">[Art Gallery]</a> 
 <a href="/" class="menuitem">[Publishes]</a> 
