--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,10 +2,12 @@
 {% include 'header.html'%}
 
 <div class="textbox">
-<img <img src="static/images/logo.png" width=100px>
 <p>
 email : amir(at)mofakhar.info
-
+<br>
+<a href="http://se.linkedin.com/in/mofakhar">
+          <img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x33.png" width="160" height="33" border="0" alt="View Amir Mofakhar's profile on LinkedIn">
+</a>
 </p>
 </div>
 {% include 'footer.html'%}
